--- a/social/templates/social/link.html
+++ b/social/templates/social/link.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'normalize.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 </head>
-<script type="text/javascript" src="{% static 'functions.js' %}"></script>
+<script type="text/javascript" src="../../static/functions.js"></script>
 {% for usuarios in usuario %}
 <body class="{{ usuarios.colorFondo }}">
 {% endfor %}
