--- a/social/templates/social/login.html
+++ b/social/templates/social/login.html
@@ -8,6 +8,7 @@
 	<div class="d-grid gap-2">
 		<button type="submit"  class="btn btn-outline-dark">Iniciar sesion</button>
 	</div>
+	<a href="{% url 'register' %}"><u>Registrate</u></a>
 </form>
 
 {% endblock %}
