--- a/social/templates/social/login.html
+++ b/social/templates/social/login.html
@@ -7,7 +7,7 @@
 	{{ form.as_p }}
 	<div class="d-grid gap-2">
 		<button type="submit"  class="btn btn-outline-dark">Iniciar sesion</button>
-		<a href="{% url 'register' %}"><u>Registrate</u></a>
+		<center><a href="{% url 'register' %}"><u>Registrate</u></a></center>
 	</div>
 	
 </form>
