--- a/social/templates/social/link.html
+++ b/social/templates/social/link.html
@@ -180,7 +180,7 @@
         <a href="https://api.whatsapp.com/send?text=https://mi.leyendo.online/leyendo/{{ user }}" class="icon icon-whatsapp" target="_blank"></a>
         <a href="#" onclick="copiarAlPortapapeles('copy_data')" class="icon icon-copy"></a>
     </div>
-    <button class="btn-flotante" style="background-color: {{ colorShare }};" onclick="showShare()" id="copy_url"><span class="material-icons">share</span></button>
+    <button class="btn-flotante" style="background-color: black;" onclick="showShare()" id="copy_url"><span class="material-icons">share</span></button>
 <br>
   <br>
   <br>
