--- a/social/templates/social/register.html
+++ b/social/templates/social/register.html
@@ -2,7 +2,11 @@
 {% load static%}
 {% block content %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<link rel="stylesheet" href="{% static 'cropper.min.css' %}"/>
 <script type="text/javascript" src="{% static 'functions.js' %}"></script>
+<script type="text/javascript" src="{% static 'cropperFunction.js' %}"></script>
+<script type="text/javascript" src="{% static 'cropper.min.js' %}"></script>
 
 {% if request.user.is_authenticated %}
 <div class="row">
@@ -47,13 +51,19 @@
 </div>
 
 {% endif %}
-
+    <div id="alert-box"></div>
+    <div id="image-box" class="mb-3"></div>
+    <form action="" id="image-form">
+        {% csrf_token %}
+        {{ formImage }}
+    </form>
+    <button class="btn btn-primary mt-3 not-visible" id="confirm-btn">Confirmar</button>
 <form class="form" method="post" enctype="multipart/form-data" id="form">
 	{% csrf_token %}
 	{{ form }}
 	<div class="d-grid gap-2">
 		<button type="submit"  class="btn btn-outline-dark">{{ boton }}</button>
-		<center><a href="{% url 'login' %}"><u>Iniciar Sesion</u></a></center>
+{#		<center><a href="{% url 'login' %}"><u>Iniciar Sesion</u></a></center>#}
 	</div>
 </form>
 {% if request.user.is_authenticated %}
