--- a/social/templates/social/register.html
+++ b/social/templates/social/register.html
@@ -53,7 +53,7 @@
 {% endif %}
     <div id="alert-box"></div>
     <div id="image-box" class="mb-3"></div>
-    <form action="" id="image-form">
+    <form action="" id="image-form" enctype="multipart/form-data">
         {% csrf_token %}
         {{ formImage }}
     </form>
