--- a/social/templates/social/link.html
+++ b/social/templates/social/link.html
@@ -153,7 +153,7 @@
                         <button class="btn block {{ usuarios.colorBoton }}" onclick="copiarAlPortapapeles('copy_data')" id="copy_url">{{ url.title }}</button>
 					{% endif %}
                     {% if url.tipo == 'contact' %}
-                        <a class="btn block {{ usuarios.colorBoton }}" onclick="capturarGuardar()">CONTACTO</a>
+                        <a class="btn block {{ usuarios.colorBoton }}" type="button" onclick="capturarGuardar()">CONTACTO</a>
                         <div hidden>
                             <p id="nombre">{{ url.title }}</p>
                             <p id="company">{{ url.company }}</p>
