ventana con videos

--- a/social/templates/social/register.html
+++ b/social/templates/social/register.html
@@ -80,8 +80,43 @@
 		<div class="row">
 			<div class="col-8 offset-5">
 				<div class="btn-group" role="group">
-					<a href="https://vimeo.com/660745612" type="button" class="btn btn-outline-dark"><span class="material-icons">android</span></a>
-					<a href="https://vimeo.com/660719793" type="button" class="btn btn-outline-dark">IOS</a>
+					<button type="button" class="btn btn-outline-dark" data-bs-toggle="modal" data-bs-target="#exampleModal"><span class="material-icons">android</span></button>
+					<!-- Modal -->
+					<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+						<div class="modal-dialog">
+						  <div class="modal-content">
+							<div class="modal-header">
+							  <h5 class="modal-title" id="exampleModalLabel" style="color: black;">Android</h5>
+							  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+							</div>
+							  <div class="modal-body text-black">
+								<div style="padding:216.49% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/660745612?h=f2b87c45d1&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="android Leyendo"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>             
+							  </div> 
+							  <!--<div class="modal-footer">
+								<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+							  </div> -->
+						  </div>
+						</div>
+					</div>
+
+					<button type="button" class="btn btn-outline-dark" data-bs-toggle="modal" data-bs-target="#exampleModal1">IOS</button>
+					<!-- Modal -->
+					<div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel1" aria-hidden="true">
+						<div class="modal-dialog">
+						  <div class="modal-content">
+							<div class="modal-header">
+							  <h5 class="modal-title" id="exampleModalLabel1" style="color: black;">IOS</h5>
+							  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+							</div>
+							  <div class="modal-body text-black">
+								<div style="padding:178.06% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/660719793?h=5659bd1fbb&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="ios Leyendo"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>             
+							  </div> 
+							  <!--<div class="modal-footer">
+								<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+							  </div> -->
+						  </div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
